kubernetes/apps/default/musichero/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: musichero
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - musichero.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: musichero
          port: 3000
